--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Roboto+Mono&display=swap');
 :root {
   --orbitron: 'Orbitron', sans-serif;
   --roboto-mono: 'Roboto Mono', monospace;
